# purere

./: README.md  pyproject.toml
purere/: __init__.py  charset.py  compiler.py  constants.py  dis.py  graph.py  matcher.py  proccess.py  tokenizer.py  topy.py
purere/stdlib/: _sre.py  sre_compile.py  sre_constants.py  sre_parse.py
tests/: conftest.py  re_tests.py  test_bugs.py  test_catogories.py  test_compare_buildin.py  test_equal.py  test_external.py  test_from_cpython_lib.py  test_fullstring.py  test_purere.py  test_re.py  test_speed.py  test_topy.py
