[tool.poetry]
name = "purere"
version = "0.2.0"
description = ""
authors = ["Joran van Apeldoorn <git@bitofbytes.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
